--- a/technix/about-us.html
+++ b/technix/about-us.html
@@ -778,7 +778,7 @@
                      <img class="shape-1" src="assets/img/cta/home-3/shape-3.png" alt="">
                      <div class="tp-cta-4-mail d-flex flex-wrap justify-content-center justify-content-xl-start align-items-center">
                         <img src="assets/img/cta/home-3/conversation.png" alt="">
-                        <a href="mailto:tanvirbhatti682@gmail.com">Contact us at <span>tanvirbhatti682@gmail.com</span></a>
+                        <a href="mailto:droracontact@gmail.com">Contact us at <span>droracontact@gmail.com</span></a>
                      </div>
                   </div>
                </div>
